syntax = "proto3";
package celestia.burn.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/burn/types";

// Query defines the gRPC querier service for the burn module.
service Query {
  // TotalBurned returns the cumulative amount of tokens burned.
  rpc TotalBurned(QueryTotalBurnedRequest) returns (QueryTotalBurnedResponse) {
    option (google.api.http).get = "/celestia/burn/v1/total_burned";
  }

  // BurnAddress returns the address where tokens should be sent to be burned.
  rpc BurnAddress(QueryBurnAddressRequest) returns (QueryBurnAddressResponse) {
    option (google.api.http).get = "/celestia/burn/v1/burn_address";
  }
}

// QueryTotalBurnedRequest is the request type for the Query/TotalBurned RPC method.
message QueryTotalBurnedRequest {}

// QueryTotalBurnedResponse is the response type for the Query/TotalBurned RPC method.
message QueryTotalBurnedResponse {
  // total_burned is the cumulative amount of utia burned.
  cosmos.base.v1beta1.Coin total_burned = 1 [(gogoproto.nullable) = false];
}

// QueryBurnAddressRequest is the request type for the Query/BurnAddress RPC method.
message QueryBurnAddressRequest {}

// QueryBurnAddressResponse is the response type for the Query/BurnAddress RPC method.
message QueryBurnAddressResponse {
  // burn_address is the bech32-encoded address where tokens should be sent to be burned.
  string burn_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
